# stag-py

./: .gitmodules  CMakeLists.txt  StagWrapper.cpp  main.cpp  pyStag.cpp  test_wrapper.py
stag/ED/: ED.cpp  EDInternals.cpp  EDLines.cpp  EDLines.h  EdgeMap.h  GradientOperatorsCV.h  ImageSmooth.cpp  ImageSmoothCV.h  NFA.h  Timer.h  Utilities.cpp  Utilities.h  ValidateEdgeSegments.cpp
